# logosV2

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run.sh
include/: LogosSymphony.h  LogosUtility.h  Schedule.h  SlashCommandListener.h
include/Logos/: Logos.h  Oot.h  Radio.h  Schedule.h  U.h  Vox.h
json/: config.json  schedule.json
src/: Listeners.h  Logos.cpp  LogosSymphony.cpp  LogosUtility.cpp  MessageListener.cpp  MessageListener.h  Oot.cpp  Radio.cpp  Schedule.cpp  SlashCommandListener.cpp  SlashCommandListener.h  U.cpp  U.h  Vox.cpp  main.cpp
